Do not elevate to register Chrome for system-level Win7 installs.

On Windows 7, browsers must be registered with the OS in HKLM. Chrome's
installer takes care of this during install/update for system-level
installs. For user-level installs, however, Chrome must pop a UAC prompt
to have setup.exe run at high integrity for this registration.

This change suppresses the elevate-to-register codepath for system-level
installs on Windows 7 since this is the installer's responsibility. This
prevents over-prompting some users (see the bug for details) at the risk
of not prompting users for whom Chrome truly isn't registered. If those
users are running a properly updating Chrome, its registration will be
repaired on the next update. If they are not running an updating Chrome,
they have bigger problems.

BUG=717913
R=gab@chromium.org

Review-Url: https://codereview.chromium.org/2878953003
Cr-Commit-Position: refs/heads/master@{#472750}

Former-commit-id: 31546fb25253afc574bf366d92ef20790c7d418c